--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatGPT-like App</title>
+    <title>쇼핑 도우미 AI</title>
     <link rel="stylesheet" href="./src/styles.css" />
 </head>
 
-<body class="h-screen flex flex-col bg-gray-100">
+<body class="h-screen flex flex-col bg-gray-50">
+
     <!-- Header -->
-    <header
-        class="p-4 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white flex items-center justify-between">
-        <h1 class="text-xl font-semibold">ChatGPT-like Interface</h1>
-        <span class="text-sm opacity-90">Powered by Parcel & Tailwind</span>
+    <header class="p-4 bg-white flex items-center justify-between shadow-lg w-full">
+        <div class="logo">
+            <span>Smart</span> Shopper
+        </div>
+        <span class="subtitle">Powered by Parcel & Tailwind</span>
     </header>
 
     <!-- Main chat area -->
-    <main id="chat-container" class="flex-1 overflow-y-auto p-4 chat-scroll">
-        <!-- Messages will go here -->
-    </main>
+    <div class="chat-container-wrapper">
+        <main id="chat-container" class="chat-scroll">
+            <div class="chat-content">
+                <div class="initial-message" id="initial-message">
+                    안녕하세요. <br /> 쇼핑 도우미 <strong>Smart Shopper</strong>입니다.<br />
+                    무엇을 도와드릴까요?
+                </div>
+            </div>
+        </main>
+    </div>
 
     <!-- Input area -->
     <footer class="border-t border-gray-300 bg-white p-4">
         <form id="message-form" class="flex items-center space-x-2">
-            <input type="text" id="user-input"
-                class="flex-1 border border-gray-300 rounded-md p-2 outline-none focus:border-blue-500"
-                placeholder="Type your message..." required />
-            <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition">
-                Send
-            </button>
+            <div class="input-container">
+                <textarea id="user-input" rows="1" placeholder="질문을 입력하세요..." required></textarea>
+                <select id="api-selector" class="border border-gray-300 rounded-md p-2">
+                    <option value="naive" selected>Naive (/chat)</option>
+                    <option value="assistant">Assistant (/assistant)</option>
+                </select>
+                <button type="submit" class="send-icon"></button>
+            </div>
         </form>
     </footer>
 
