AI 답변 생성중 로딩 표시 추가

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>쇼핑 도우미 AI</title>
+    <title>Smart Shopper</title>
     <link rel="stylesheet" href="./src/styles.css" />
 </head>
 
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <header class="p-4 bg-white flex items-center justify-between shadow-lg w-full">
-        <div class="logo">
+        <div class="logo" id="logo">
             <span>Smart</span> Shopper
         </div>
         <span class="subtitle">Powered by Parcel & Tailwind</span>
